// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tsdicts.sql > line 4 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY ispell (
                        Template=ispell,
                        DictFile=ispell_sample,
                        AffFile=ispell_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 72,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 63,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 113,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 104,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 160,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 152,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "ispell",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 10 1`] = `
[
  "SELECT ts_lexize('ispell', 'skies')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": "ispell",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 27,
                            "sval": {
                              "sval": "skies",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_lexize",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 28 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell (
                        Template=ispell,
                        DictFile=ispell_sample,
                        AffFile=hunspell_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 74,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 65,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 115,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 106,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 162,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 154,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 52 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_long (
                        Template=ispell,
                        DictFile=hunspell_sample_long,
                        AffFile=hunspell_sample_long
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 79,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 70,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 120,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 111,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 174,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 166,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_long",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 79 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_num (
                        Template=ispell,
                        DictFile=hunspell_sample_num,
                        AffFile=hunspell_sample_num
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 78,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 69,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 119,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 110,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 172,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 164,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_num",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 105 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_err (
						Template=ispell,
						DictFile=ispell_sample,
						AffFile=hunspell_sample_long
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 83,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 74,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 112,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 104,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_err",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 111 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_err (
						Template=ispell,
						DictFile=ispell_sample,
						AffFile=hunspell_sample_num
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 83,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 74,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 112,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 104,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_err",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 117 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_invalid_1 (
						Template=ispell,
						DictFile=hunspell_sample_long,
						AffFile=ispell_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 66,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 89,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 80,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 125,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 117,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_invalid_1",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 123 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_invalid_2 (
						Template=ispell,
						DictFile=hunspell_sample_long,
						AffFile=hunspell_sample_num
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 66,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 89,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 80,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 125,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 117,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_invalid_2",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 129 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_invalid_3 (
						Template=ispell,
						DictFile=hunspell_sample_num,
						AffFile=ispell_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 66,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 89,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 80,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 124,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 116,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_invalid_3",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 135 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY hunspell_err (
						Template=ispell,
						DictFile=hunspell_sample_num,
						AffFile=hunspell_sample_long
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 83,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_num",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 74,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 118,
                      "names": [
                        {
                          "String": {
                            "sval": "hunspell_sample_long",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "afffile",
                  "location": 110,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_err",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 142 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY synonym (
						Template=synonym,
						Synonyms=synonym_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 55,
                      "names": [
                        {
                          "String": {
                            "sval": "synonym",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 46,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 79,
                      "names": [
                        {
                          "String": {
                            "sval": "synonym_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "synonyms",
                  "location": 70,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "synonym",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 152 1`] = `
[
  "SELECT dictinitoption FROM pg_ts_dict WHERE dictname = 'synonym'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 27,
                  "relname": "pg_ts_dict",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "dictinitoption",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "dictname",
                        },
                      },
                    ],
                    "location": 44,
                  },
                },
                "location": 53,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 55,
                    "sval": {
                      "sval": "synonym",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 154 1`] = `
[
  "ALTER TEXT SEARCH DICTIONARY synonym (CaseSensitive = 1)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSDictionaryStmt": {
            "dictname": [
              {
                "String": {
                  "sval": "synonym",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "casesensitive",
                  "location": 38,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 158 1`] = `
[
  "ALTER TEXT SEARCH DICTIONARY synonym (CaseSensitive = 2)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSDictionaryStmt": {
            "dictname": [
              {
                "String": {
                  "sval": "synonym",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 2,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "casesensitive",
                  "location": 38,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 158 2`] = `
[
  "  -- fail

ALTER TEXT SEARCH DICTIONARY synonym (CaseSensitive = off)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSDictionaryStmt": {
            "dictname": [
              {
                "String": {
                  "sval": "synonym",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 65,
                      "names": [
                        {
                          "String": {
                            "sval": "off",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "casesensitive",
                  "location": 49,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 167 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY thesaurus (
                        Template=thesaurus,
						DictFile=thesaurus_sample,
						Dictionary=english_stem
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 75,
                      "names": [
                        {
                          "String": {
                            "sval": "thesaurus",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 66,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 101,
                      "names": [
                        {
                          "String": {
                            "sval": "thesaurus_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictfile",
                  "location": 92,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 136,
                      "names": [
                        {
                          "String": {
                            "sval": "english_stem",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "dictionary",
                  "location": 125,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "thesaurus",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 176 1`] = `
[
  "CREATE TEXT SEARCH CONFIGURATION ispell_tst (
						COPY=english
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 57,
                      "names": [
                        {
                          "String": {
                            "sval": "english",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy",
                  "location": 52,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "ispell_tst",
                },
              },
            ],
            "kind": "OBJECT_TSCONFIGURATION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 180 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION ispell_tst ALTER MAPPING FOR
	word, numword, asciiword, hword, numhword, asciihword, hword_part, hword_numpart, hword_asciipart
	WITH ispell, english_stem",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "ispell_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ispell",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "english_stem",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_ALTER_MAPPING_FOR_TOKEN",
            "override": true,
            "tokentype": [
              {
                "String": {
                  "sval": "word",
                },
              },
              {
                "String": {
                  "sval": "numword",
                },
              },
              {
                "String": {
                  "sval": "asciiword",
                },
              },
              {
                "String": {
                  "sval": "hword",
                },
              },
              {
                "String": {
                  "sval": "numhword",
                },
              },
              {
                "String": {
                  "sval": "asciihword",
                },
              },
              {
                "String": {
                  "sval": "hword_part",
                },
              },
              {
                "String": {
                  "sval": "hword_numpart",
                },
              },
              {
                "String": {
                  "sval": "hword_asciipart",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 184 1`] = `
[
  "SELECT to_tsvector('ispell_tst', 'Booking the skies after rebookings for footballklubber from a foot')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 19,
                            "sval": {
                              "sval": "ispell_tst",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "Booking the skies after rebookings for footballklubber from a foot",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "to_tsvector",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 189 1`] = `
[
  "CREATE TEXT SEARCH CONFIGURATION hunspell_tst (
						COPY=ispell_tst
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 59,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_tst",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy",
                  "location": 54,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "hunspell_tst",
                },
              },
            ],
            "kind": "OBJECT_TSCONFIGURATION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 193 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION hunspell_tst ALTER MAPPING
	REPLACE ispell WITH hunspell",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "hunspell_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ispell",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hunspell",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_REPLACE_DICT",
            "replace": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 200 1`] = `
[
  "SELECT to_tsquery('hunspell_tst', 'footballyklubber:b <-> sky')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 18,
                            "sval": {
                              "sval": "hunspell_tst",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "footballyklubber:b <-> sky",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "to_tsquery",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 204 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION hunspell_tst ALTER MAPPING
	REPLACE hunspell WITH hunspell_long",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "hunspell_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hunspell",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hunspell_long",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_REPLACE_DICT",
            "replace": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 212 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION hunspell_tst ALTER MAPPING
	REPLACE hunspell_long WITH hunspell_num",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "hunspell_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hunspell_long",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hunspell_num",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_REPLACE_DICT",
            "replace": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 220 1`] = `
[
  "CREATE TEXT SEARCH CONFIGURATION synonym_tst (
						COPY=english
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 58,
                      "names": [
                        {
                          "String": {
                            "sval": "english",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy",
                  "location": 53,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "synonym_tst",
                },
              },
            ],
            "kind": "OBJECT_TSCONFIGURATION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 224 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION synonym_tst ALTER MAPPING FOR
	asciiword, hword_asciipart, asciihword
	WITH synonym, english_stem",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "synonym_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "synonym",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "english_stem",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_ALTER_MAPPING_FOR_TOKEN",
            "override": true,
            "tokentype": [
              {
                "String": {
                  "sval": "asciiword",
                },
              },
              {
                "String": {
                  "sval": "hword_asciipart",
                },
              },
              {
                "String": {
                  "sval": "asciihword",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 235 1`] = `
[
  "CREATE TEXT SEARCH CONFIGURATION thesaurus_tst (
						COPY=synonym_tst
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "synonym_tst",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy",
                  "location": 55,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "thesaurus_tst",
                },
              },
            ],
            "kind": "OBJECT_TSCONFIGURATION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 239 1`] = `
[
  "ALTER TEXT SEARCH CONFIGURATION thesaurus_tst ALTER MAPPING FOR
	asciiword, hword_asciipart, asciihword
	WITH synonym, thesaurus, english_stem",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTSConfigurationStmt": {
            "cfgname": [
              {
                "String": {
                  "sval": "thesaurus_tst",
                },
              },
            ],
            "dicts": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "synonym",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "thesaurus",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "english_stem",
                      },
                    },
                  ],
                },
              },
            ],
            "kind": "ALTER_TSCONFIG_ALTER_MAPPING_FOR_TOKEN",
            "override": true,
            "tokentype": [
              {
                "String": {
                  "sval": "asciiword",
                },
              },
              {
                "String": {
                  "sval": "hword_asciipart",
                },
              },
              {
                "String": {
                  "sval": "asciihword",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tsdicts.sql > line 248 1`] = `
[
  "CREATE TEXT SEARCH DICTIONARY tsdict_case
(
	Template = ispell,
	"DictFile" = ispell_sample,
	"AffFile" = ispell_sample
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "template",
                  "location": 45,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 78,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "DictFile",
                  "location": 65,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 106,
                      "names": [
                        {
                          "String": {
                            "sval": "ispell_sample",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "AffFile",
                  "location": 94,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "tsdict_case",
                },
              },
            ],
            "kind": "OBJECT_TSDICTIONARY",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
